--- a/index.html
+++ b/index.html
@@ -4,10 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Weather App</title>
+    <link rel="stylesheet" href="./assets/css/style.css">
+   
 </head>
 <body>
+    <div class="dash">
+        <h1>Weather Dashboard</h1>
+    </div>
+    <div class="weth.info" id="wethInfo">
+
+    </div>
+    <div class="search" id="search">
+        <h2>Search for a City:</h2>
+        <input class="srchBar" type="text">
+        <button class="btn">Search</button>
+        <div class="presist" id="presist">
+            
+        </div>
+
+   
 
 </body>
-<script src="./"></script>
+<script src="./assets/js/fetch.js"></script>
+<script src="./assets/js/ui.js"></script>
+<script src="./assets/js/app.js"></script>
 </html>
