--- a/index.html
+++ b/index.html
@@ -20,12 +20,70 @@
         <input class="srchBar" type="text">
         <button class="btn">Search</button>
         <div class="presist" id="presist">
-            
+
+    </div>
+    <div class="container" id="main">
+    </div>
+        <h2></h2>
+        <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+    </div>
+    <div class="fiveDay" id="five">
+        <h3>5-Day Forecast:</h3>
+        <div class="card" id="card1">
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
         </div>
+        <div class="card" id="card2">
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </div>
+        <div class="card" id="card3">
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </div>
+        <div class="card" id="card4">
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </div>
+        <div class="card" id="card5">
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </div>
+
+    </div>
+
+
 
    
 
 </body>
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"></script>
 <script src="./assets/js/fetch.js"></script>
 <script src="./assets/js/ui.js"></script>
 <script src="./assets/js/app.js"></script>
